--- a/styles/eventstyle.css
+++ b/styles/eventstyle.css
@@ -54,6 +54,7 @@ header a {
     display: block; /*clicking the li instead of the text will take you to the page*/
     text-decoration: none;
     color: white;
+	text-shadow: 1px 1px black;
 }
 /*Main nav END*/
 
